return empty list rather than list of null